[gd_scene load_steps=6 format=3 uid="uid://ch52bkknqmgm5"]

[ext_resource type="Script" path="res://scenes/nav-bar/nav-bar.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bynqjoikm5tjj" path="res://assets/navbar/nav-home-button.png" id="2"]
[ext_resource type="Texture2D" uid="uid://c7i366fn26ket" path="res://assets/navbar/nav-videos-button.png" id="3"]
[ext_resource type="Texture2D" uid="uid://pvi5gv0fcwpn" path="res://assets/navbar/nav-toolbox-button.png" id="4"]
[ext_resource type="Texture2D" uid="uid://byiffq4c4rg7h" path="res://assets/navbar/nav-about-button.png" id="6"]

[node name="NavBar" type="VBoxContainer"]
custom_minimum_size = Vector2(40, 200)
size_flags_vertical = 0
theme_override_constants/separation = 4
alignment = 1
script = ExtResource("1")

[node name="HomeButton" type="TextureButton" parent="."]
layout_mode = 2
tooltip_text = "Home"
texture_normal = ExtResource("2")

[node name="VideosButton" type="TextureButton" parent="."]
layout_mode = 2
tooltip_text = "Videos"
texture_normal = ExtResource("3")

[node name="ToolboxButton" type="TextureButton" parent="."]
layout_mode = 2
tooltip_text = "Toolbox"
texture_normal = ExtResource("4")

[node name="AboutButton" type="TextureButton" parent="."]
layout_mode = 2
tooltip_text = "About"
texture_normal = ExtResource("6")

[connection signal="pressed" from="HomeButton" to="." method="_on_HomeButton_pressed"]
[connection signal="pressed" from="VideosButton" to="." method="_on_VideosButton_pressed"]
[connection signal="pressed" from="ToolboxButton" to="." method="_on_ToolboxButton_pressed"]
[connection signal="pressed" from="AboutButton" to="." method="_on_AboutButton_pressed"]
